lab3 done-with save

--- a/src/main/resources/static/DeliveryInfo.html
+++ b/src/main/resources/static/DeliveryInfo.html
@@ -7,7 +7,7 @@
 <body>
 <form action="AddressInfo.do" method="post">
     Name: <input type="text" name="ime" /><br/>
-    Adress: <input type="text" name="adresa" /><br/><br/>
+    Address: <input type="text" name="adresa" /><br/><br/>
 
     <input type="submit" value="Submit" />
 </form>
